# claudewrapper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: claude_runner.py  cli_backend.py  config.py  db.py  git_worktree.py  health.py  linear_client.py  main.py  orchestrator.py  prompt_seeds.py  repo_manager.py  sanitize.py  ssh.py  task_modes.py  utils.py
app/static/: style.css
app/templates/: app.html  base.html  files.html  index.html  log.html  picker.html  prompt.html  settings.html  teams.html  tickets.html  usage.html
docker/: entrypoint.sh
scripts/: run.ps1  run.sh
