[project]
name = "claudewrapper"
version = "0.1.0"
description = "Headless Linear + Claude Code orchestration"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "aiofiles>=23.2",
  "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
claudewrapper = "app.main:run"
